--- a/styles/components/_pricing.scss
+++ b/styles/components/_pricing.scss
@@ -21,6 +21,7 @@ $bgfontcolor: #ffffff;
   @media screen and (max-width: 450px) {
     margin-top: 1vw !important;
     padding-bottom: 2rem;
+    width: 100%;
   }
 
   .priceInner {
@@ -36,6 +37,10 @@ $bgfontcolor: #ffffff;
     position: relative;
     padding: 1rem 1rem 0rem;
     height: 600px;
+
+    @media screen and (max-width: 450px) {
+      width: 98%;
+    }
 
     .priceTextDiv {
       margin-top: 6rem;
@@ -63,7 +68,6 @@ $bgfontcolor: #ffffff;
   }
 }
 
-
 .tableMain {
   display: flex;
   flex-direction: column;
@@ -81,6 +85,7 @@ $bgfontcolor: #ffffff;
   @media screen and (max-width: 450px) {
     margin-top: 1vw !important;
     padding-bottom: 2rem;
+    width: 100%;
   }
 
   .tableInner {
@@ -92,27 +97,28 @@ $bgfontcolor: #ffffff;
     background-attachment: fixed;
     box-shadow: 0 5px 30px 1px;
     width: 92%;
-    padding: 6rem 1rem; 
+    padding: 6rem 1rem;
     margin-top: 6rem;
 
-     @media screen and (min-width: 600px) and (max-width: 770px) {
-    margin-top: 2rem;
-    padding: 2rem 1rem;
-  }
+    @media screen and (min-width: 600px) and (max-width: 770px) {
+      margin-top: 2rem;
+      padding: 2rem 1rem;
+    }
 
-  @media screen and (max-width: 450px) {
-    margin-top: 1vw !important;
-    padding: 2rem auto;
-  }
-
-
+    @media screen and (max-width: 450px) {
+      margin-top: 1vw !important;
+      padding: 2rem auto;
+      width: 98%;
     }
   }
+}
 
 .pricingTable {
-  margin: 0px auto;
+  margin: 2rem auto;
   margin-top: 0px;
   font-family: Alpharush;
+  line-height: 2rem;
+  font-size: 0.9rem;
 
   & > &-title {
     text-align: center;
@@ -132,6 +138,10 @@ $bgfontcolor: #ffffff;
 
     @media screen and (max-width: 480px) {
       margin-bottom: 30px;
+    }
+
+    @media screen and (max-width: 450px) {
+      margin: 5rem 0;
     }
   }
 
@@ -242,20 +252,18 @@ $bgfontcolor: #ffffff;
       }
 
       &__header {
-        font-size: 1.6em;
+        font-size: 1.8em;
         padding: 40px 0px;
         border-bottom: 2px solid #ebedec;
-        letter-spacing: 0.03em;
+        letter-spacing: 0.5rem;
+        background: white;
+        color: black;
 
         @media screen and (max-width: 1068px) {
           font-size: 1.45em;
         }
         @media screen and (max-width: 767px) {
-          padding: 0px;
-          border-bottom: none;
           float: left;
-          padding-top: 3%;
-          padding-bottom: 2%;
         }
 
         @media screen and (max-width: 610px) {
@@ -266,7 +274,7 @@ $bgfontcolor: #ffffff;
           float: none;
           width: 100%;
           font-size: 1.8em;
-          margin-bottom: 5px;
+          margin: 2rem 0;
         }
       }
 
@@ -281,8 +289,6 @@ $bgfontcolor: #ffffff;
         }
 
         @media screen and (max-width: 767px) {
-          border-bottom: none;
-          padding: 0;
           float: left;
           clear: left;
         }
@@ -295,7 +301,7 @@ $bgfontcolor: #ffffff;
           float: none;
           width: 100%;
           font-size: 3em;
-          margin-bottom: 10px;
+          margin: 1rem auto;
         }
 
         span:first-of-type {
@@ -320,16 +326,16 @@ $bgfontcolor: #ffffff;
       &__options {
         list-style: none;
         padding: 15px;
-        font-size: 0.9em;
+        font-size: 1rem;
         border-bottom: 2px solid #ebedec;
+        background-color: white;
+        color: black;
 
         @media screen and (max-width: 1068px) {
           font-size: 0.85em;
         }
 
         @media screen and (max-width: 767px) {
-          border-bottom: none;
-          padding: 0;
           margin-right: 10%;
         }
 
@@ -415,7 +421,7 @@ $bgfontcolor: #ffffff;
         @media screen and (max-width: 480px) {
           font-size: 1em;
           width: 50%;
-          margin: 10px auto;
+          margin: 50px auto 30px;
         }
 
         &:hover {
