--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -25,6 +25,6 @@ $black: #030303;
 @import "components/contact";
 @import "components/pricing";
 @import "components/blog";
-@import "components/single_blog";
+@import "components/_slug";
 
 @import "components/terminal";
