--- a/styles/components/_contact.scss
+++ b/styles/components/_contact.scss
@@ -15,6 +15,7 @@
   @media screen and (max-width: 450px) {
     margin-top: 1vw !important;
     padding-bottom: 2rem;
+    width: 100%;
   }
 
   .contactInner {
@@ -26,6 +27,10 @@
     position: relative;
     padding: 1rem 1rem 0rem;
     height: 600px;
+
+    @media screen and (max-width: 450px) {
+      width: 98%;
+    }
 
     .contactTextDiv {
       margin-top: 25rem;
@@ -73,6 +78,7 @@
   @media screen and (max-width: 450px) {
     margin-top: 1vw !important;
     padding-bottom: 2rem;
+    width: 100%;
   }
 
   .formInner {
@@ -82,6 +88,10 @@
     position: relative;
     box-shadow: 0 5px 30px 1px;
     padding: 1rem 1rem 0rem;
+
+    @media screen and (max-width: 450px) {
+      width: 98%;
+    }
 
     .textPart {
       color: $white;
@@ -102,7 +112,7 @@
         }
 
         @media screen and (max-width: 450px) {
-          font-size: 3rem;
+          font-size: 3.3rem;
         }
       }
       .textPartB {
@@ -114,7 +124,7 @@
         }
 
         @media screen and (max-width: 450px) {
-          font-size: 1rem;
+          font-size: 1.5rem;
         }
       }
     }
