--- a/styles/components/_home.scss
+++ b/styles/components/_home.scss
@@ -57,6 +57,10 @@ $black: #030303;
     @media screen and (max-width: 600px) {
       padding: 1rem 0.5rem;
     }
+
+    @media screen and (max-width: 450px) {
+      width: 98%;
+    }
   }
 
   .headerText {
@@ -169,6 +173,10 @@ $black: #030303;
       justify-content: center;
       box-shadow: 0 5px 30px 1px;
       padding-top: 2.5rem;
+
+      @media screen and (max-width: 450px) {
+        width: 98%;
+      }
     }
     .functionText {
       display: flex;
@@ -211,7 +219,7 @@ $black: #030303;
       }
 
       @media screen and (max-width: 430px) {
-        margin: 12vw auto;
+        margin: 16vw auto;
       }
     }
 
@@ -224,6 +232,7 @@ $black: #030303;
       }
 
       @media screen and (max-width: 430px) {
+        padding: 2rem 0;
       }
     }
   }
