Music player fixed

--- a/styles/components/_blog.scss
+++ b/styles/components/_blog.scss
@@ -175,7 +175,7 @@
         }
 
         .postReadMoreBtn {
-          background: $red;
+          background: red;
           padding: 0.3rem;
           font-family: "Times New Roman", Times, serif;
           margin-left: 1.5rem;
