--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -18,6 +18,7 @@ $black: #030303;
 @import "components/experience";
 @import "components/header";
 @import "components/footer";
+@import "components/footer-menu";
 @import "components/layout";
 @import "components/loading";
 @import "components/home";
