--- a/styles/components/_contact.scss
+++ b/styles/components/_contact.scss
@@ -7,9 +7,10 @@
   width: 95%;
   position: relative;
 
-  @media screen and (min-width: 600px) and (max-width: 770px) {
+  @media screen and (min-width: 600px) and (max-width: 1040px) {
     margin-top: 2rem;
     padding-bottom: 2rem;
+    width: 100%;
   }
 
   @media screen and (max-width: 450px) {
@@ -28,7 +29,7 @@
     padding: 1rem 1rem 0rem;
     height: 600px;
 
-    @media screen and (max-width: 450px) {
+    @media screen and (max-width: 1050px) {
       width: 98%;
     }
 
@@ -70,9 +71,10 @@
   width: 95%;
   position: relative;
 
-  @media screen and (min-width: 600px) and (max-width: 770px) {
+  @media screen and (min-width: 600px) and (max-width: 1050px) {
     margin-top: 2rem;
     padding-bottom: 2rem;
+    width: 100%;
   }
 
   @media screen and (max-width: 450px) {
@@ -89,7 +91,7 @@
     box-shadow: 0 5px 30px 1px;
     padding: 1rem 1rem 0rem;
 
-    @media screen and (max-width: 450px) {
+    @media screen and (max-width: 1050px) {
       width: 98%;
     }
 
@@ -107,7 +109,7 @@
         margin: 5rem 0 0 0;
         font-size: 5rem;
         color: white;
-        @media screen and (min-width: 600px) and (max-width: 770px) {
+        @media screen and (min-width: 600px) and (max-width: 1050px) {
           font-size: 4rem;
         }
 
@@ -116,11 +118,13 @@
         }
       }
       .textPartB {
-        margin: 2rem 0 0 4rem;
+        margin: 2rem 0;
+        margin-left: 1.5rem;
         font-size: 1.5rem;
         line-height: 2rem;
-        @media screen and (min-width: 600px) and (max-width: 770px) {
-          font-size: 1rem;
+        @media screen and (min-width: 600px) and (max-width: 1050px) {
+          font-size: 1.3rem;
+          margin-left: 0.7rem;
         }
 
         @media screen and (max-width: 450px) {
