--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -14,29 +14,30 @@ $black: #030303;
   top: 0;
   z-index: 998;
   background-color: $black;
-  padding: 0.5rem 2rem 0rem;
+  padding: 0.5rem 1rem 0rem;
   box-shadow: 0 0 20px 1px $white;
   margin: 0 auto;
   width: 100%;
 
-  @media screen and (min-width: 600px) and (max-width: 770px) {
-    padding: 0;
-  }
-
-  @media screen and (max-width: 450px) {
+  @media screen and (max-width: 800px) {
     visibility: hidden;
+    padding: 0;
   }
 
   .menubar {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding: 0rem 3rem;
+    // padding: 0rem 1rem;
+
+    @media screen and (max-width: 1050px) {
+      // width: 60%;
+    }
   }
 
   .menu-item {
-    font-size: 1.1rem;
-    padding: 0.5rem 1rem;
+    font-size: 1.15rem;
+    padding: 0.5rem 0.5rem;
   }
 
   .menu-item:active {
@@ -54,7 +55,6 @@ $black: #030303;
   padding: 1rem 1rem;
   text-align: center;
   border-radius: 5px;
-  margin-right: 20rem;
   background: $red;
 }
 .contactDiv:hover {
@@ -67,9 +67,11 @@ $black: #030303;
   justify-content: space-between;
   align-items: center;
   background: $black !important;
+  visibility: hidden;
+  background: white;
 
-  @media screen and (min-width: 500px) {
-    visibility: hidden;
+  @media screen and (max-width: 800px) {
+    visibility: visible;
   }
 }
 
@@ -132,7 +134,7 @@ $black: #030303;
   position: relative;
   width: 30px;
   z-index: 1000;
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 450px) {
     display: inline-block;
   }
 
