--- a/styles/components/_about.scss
+++ b/styles/components/_about.scss
@@ -3,20 +3,20 @@
   flex-direction: column;
   justify-content: stretch;
   align-items: center;
-  margin: 1rem auto 0rem;
+  margin: 6.5rem auto 0rem;
   width: 95%;
   position: relative;
 
-  @media screen and (min-width: 600px) and (max-width: 1050px) {
-    margin-top: 1rem;
-    padding-bottom: 2rem;
+  @media screen and (max-width: 1050px) {
+    padding-bottom: 6rem;
     width: 100%;
   }
 
+  @media screen and (min-width: 600px) and (max-width: 770px) {
+    margin: 6rem 0 0;
+  }
+
   @media screen and (max-width: 450px) {
-    margin-top: 1vw !important;
-    padding-bottom: 2rem;
-    width: 100%;
   }
 
   .bannerInner {
