--- a/styles/components/_blog.scss
+++ b/styles/components/_blog.scss
@@ -3,20 +3,21 @@
   flex-direction: column;
   justify-content: stretch;
   align-items: center;
-  margin: 1rem auto 0rem;
+  margin: 7rem auto 0rem;
   width: 95%;
   position: relative;
 
   @media screen and (min-width: 600px) and (max-width: 1050px) {
-    margin-top: 2rem;
     padding-bottom: 2rem;
     width: 100%;
   }
 
+  @media screen and (min-width: 600px) and (max-width: 770px) {
+    margin: 6rem 0 0;
+  }
+
   @media screen and (max-width: 450px) {
-    margin-top: 1vw !important;
-    padding-bottom: 2rem;
-    width: 100%;
+    margin-top: 6rem;
   }
 
   .blogInner {
@@ -180,6 +181,7 @@
           background: grey;
           padding: 0.3rem;
           font-family: "Times New Roman", Times, serif;
+          margin-left: 1rem;
           @media screen and (min-width: 600px) and (max-width: 770px) {
           }
 
