--- a/styles/components/_contact.scss
+++ b/styles/components/_contact.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: stretch;
   align-items: center;
-  margin: 1rem auto 0rem;
+  margin: 6.5rem auto 0rem;
   width: 95%;
   position: relative;
 
@@ -13,8 +13,12 @@
     width: 100%;
   }
 
+  @media screen and (min-width: 600px) and (max-width: 770px) {
+    margin: 6rem 0 0;
+  }
+
   @media screen and (max-width: 450px) {
-    margin-top: 1vw !important;
+    margin-top: 6rem;
     padding-bottom: 2rem;
     width: 100%;
   }
