--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "neototem";
+  src: local("neototem"), url("../fonts/Neototem.woff") format("woff");
+}
+
 * {
   font-family: "neototem";
 }
