--- a/styles/components/_contact.scss
+++ b/styles/components/_contact.scss
@@ -131,8 +131,9 @@
           margin-left: 0.7rem;
         }
 
-        @media screen and (max-width: 450px) {
+        @media screen and (max-width: 770px) {
           font-size: 1.5rem;
+          text-align: center;
         }
       }
     }
