--- a/styles/components/_experience.scss
+++ b/styles/components/_experience.scss
@@ -6,6 +6,7 @@
   width: 100%;
   height: 100%;
   z-index: 1;
+  text-align: center;
   @media screen and (max-width: 450px) {
     width: 100%;
   }
